# HomeTray

./: .gitignore  .pre-commit-config.yaml  HomeTray.vbs  LICENSE  Makefile  README.md  build.cmd  config.example.py  home_tray.py  requirements-dev.txt  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  version.yaml
hometray/: __main__.py  config.py  iconmanager.py  settings.py  tray.py
tests/: config_test.py
