[metadata]
name = hometray
version = 1.1.0.1
description = HomeTray allows you to control Home Assistant from the system tray.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentscode/hometray
author = Vincent Schmandt
author_email = vincentscode@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    wxPython==4.2.0
    requests==2.28.2
    homeassistant-api==4.0.1
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_recursive_aliases = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false